tests/invalid/Record_Invalid_9.whiley
type Node is ({ int data } n) where data >= 0
